[gd_scene load_steps=6 format=3 uid="uid://dc0yqtbx1saef"]

[ext_resource type="Script" path="res://scripts/Buildings/npc_1.gd" id="1_e57kj"]
[ext_resource type="Texture2D" uid="uid://bfxcfqcait25m" path="res://art/UI/headshots/enemyFlyingAlt_1.png" id="2_5pfc8"]
[ext_resource type="Texture2D" uid="uid://bkc1tjst7l04l" path="res://art/UI/UI pixelart Assets 4 -1.3/16x16/Set1/Set1-1.png" id="3_j7vtb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_68akm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kryr2"]

[node name="npc_1" type="StaticBody2D"]
script = ExtResource("1_e57kj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5pfc8")

[node name="Collider" type="CollisionShape2D" parent="."]
scale = Vector2(5.4, 5.08)
shape = SubResource("CapsuleShape2D_68akm")

[node name="PlayerDetector" type="Area2D" parent="Collider"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider/PlayerDetector"]
scale = Vector2(2.54815, 2.27559)
shape = SubResource("CapsuleShape2D_kryr2")

[node name="InteractibleButtonHelper" type="Sprite2D" parent="."]
position = Vector2(0, -54)
texture = ExtResource("3_j7vtb")

[node name="Label" type="Label" parent="InteractibleButtonHelper"]
offset_left = -3.24324
offset_top = -7.11111
offset_right = 12.7568
offset_bottom = 18.8889
theme_override_font_sizes/font_size = 10
text = "F"

[connection signal="body_entered" from="Collider/PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="Collider/PlayerDetector" to="." method="_on_player_detector_body_exited"]
